<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
<com.google.android.material.tabs.TabLayout
android:id="@+id/TabLayout"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="1dp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent">

<com.google.android.material.tabs.TabItem
    android:id="@+id/MatchesTab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/matches" />

<com.google.android.material.tabs.TabItem
    android:id="@+id/LiveTab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/live" />

<com.google.android.material.tabs.TabItem
    android:id="@+id/PointsTab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/points" />
</com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/TabviewPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TabLayout">

    </androidx.viewpager.widget.ViewPager>
</androidx.constraintlayout.widget.ConstraintLayout>