<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignupActivity">

    <ImageView
        android:id="@+id/IvOtpIcon"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="95dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/BtOtpVerify"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BtOtpVerify"
        app:srcCompat="@drawable/ic_otp_icon" />

    <Button
        android:id="@+id/SignUpBt"
        android:layout_width="111dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#0C1C40"
        android:onClick="OnSignUp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtOtpVerify" />

    <ImageView
        android:id="@+id/IvLogoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IvLogo"
        app:srcCompat="@drawable/name" />

    <ImageView
        android:id="@+id/IvLogo"
        android:layout_width="134dp"
        android:layout_height="135dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/c11logo" />

    <EditText
        android:id="@+id/EtSignUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textPersonName"
        android:textColor="#0C1C40"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtSignPhoneNo" />

    <EditText
        android:id="@+id/EtSignPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#0C1C40"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtSignUserName" />

    <EditText
        android:id="@+id/EtRePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/re_enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#0C1C40"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtSignPassword" />

    <Button
        android:id="@+id/BtOtpVerify"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#F7F7F7"
        android:onClick="OnOtpVerify"
        android:text="@string/verify_phone_no_via_otp"
        android:textColor="#0C1C40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/IvOtpIcon"
        app:layout_constraintTop_toBottomOf="@+id/EtRePassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/AppSlogan"
        android:textColor="#0C1C40"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IvLogoName" />

    <EditText
        android:id="@+id/EtSignPhoneNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:textColor="#0C1C40"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EtSignUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>